fixed footnote superscript alignment

--- a/src/components/footnotes/footnotes.module.scss
+++ b/src/components/footnotes/footnotes.module.scss
@@ -26,10 +26,6 @@
       font-size: 1rem;
     }
 
-    .number {
-      font-size: smaller;
-    }
-
     .content {
       margin-left: 0.25rem;
       word-break: break-word;
